tests/valid/test10_division.ml
// Test 10: Division y mix
func calcular(n) {
    return n * 2 + 10 / 2;
}
r = calcular(5);
print(r);
