tests/errors/err10_var_no_init_en_funcion.ml
// Error 10: [SEMÁNTICO] Variable no declarada dentro de función
func calcular(n) {
    resultado = n + extra;
    return resultado;
}
a = calcular(5);
print(a);
